# EasyMill

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  gerber-filenames.json  test_gerber_direct.rs
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.tokensave/: branch-meta.json  config.json  tokensave.db  tokensave.db-shm
docs/superpowers/plans/: 2026-07-16-gerber-parser-replacement.md  2026-07-16-ui-pipeline-redesign.md  2026-07-16-ui-redesign.md  2026-07-18-pcb-stackup-data-model.md  2026-07-18-release-tour-version-logic.md  2026-07-18-ui-polish-features.md
docs/superpowers/specs/: 2026-07-16-gerber-parser-replacement.md  2026-07-16-ui-pipeline-redesign.md  2026-07-16-ui-redesign-design.md  2026-07-18-pcb-stackup-data-model.md  2026-07-18-release-tour-version-logic-design.md  2026-07-18-ui-polish-features-design.md
src/: conversion.rs  gerber.rs  lib.rs  logging.rs  main.rs  stackup.rs
src/ui/: mod.rs  palette.rs  styles.rs  widgets.rs
src/ui/widgets/: components.rs  mod.rs  sidebar.rs  steps.rs
test_files/inputs/unzipped/: USB PD-B_Cu.gbr  USB PD-B_Mask.gbr  USB PD-B_Paste.gbr  USB PD-B_Silkscreen.gbr  USB PD-Edge_Cuts.gbr  USB PD-F_Cu.gbr  USB PD-F_Mask.gbr  USB PD-F_Paste.gbr  USB PD-F_Silkscreen.gbr  USB PD-NPTH.drl  USB PD-PTH.drl  USB PD-job.gbrjob
