[package]
name = "easymill"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["image", "tokio"] }
image = "0.25.5"
tokio = { version = "1", features = ["rt-multi-thread"] }
rfd = "0.15.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zip = "2.2.2"
gerber_parser = "0.5"
gerber-types = "0.7"
lyon = "1.0"
nalgebra = "0.34"

[dev-dependencies]
tempfile = "3.14.0"
